--- a/action.yml
+++ b/action.yml
@@ -25,6 +25,10 @@ inputs:
     description: '[Optional] commit message for the output repository. ORIGIN_COMMIT is replaced by the URL@commit in the origin repo'
     default: 'Update from ORIGIN_COMMIT'
     required: false
+  final-push:
+    description: 'only source| source priority| target repo priority. '
+    default: 'target repo priority'
+    required: false
 runs:
   using: 'docker'
   image: 'Dockerfile'
@@ -36,6 +40,7 @@ runs:
     - ${{ inputs.destination-repository-username }}
     - ${{ inputs.target-branch }}
     - ${{ inputs.commit-message }}
+    - ${{ inputs.final-push }}
 branding:
   icon: 'git-commit'
   color: 'green'
